{
  "version": 4,
  "terraform_version": "1.9.5",
  "serial": 30,
  "lineage": "6eca3c1d-074e-f1c9-f9a8-ff9735033aa6",
  "resources": [
    {
      "mode": "data",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:686255948752:subnet/subnet-0064040f609749a4c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "available_ip_address_count": 250,
            "cidr_block": "10.0.1.0/24",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "filter": [
              {
                "name": "tag:Name",
                "values": [
                  "Subnet-Public : Public Subnet 1"
                ]
              }
            ],
            "id": "subnet-0064040f609749a4c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "686255948752",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "Name": "Subnet-Public : Public Subnet 1"
            },
            "vpc_id": "vpc-0471317b45fa053ac"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-091d9902767672896",
            "arn": "arn:aws:ec2:us-east-1:686255948752:elastic-ip/eipalloc-091d9902767672896",
            "association_id": "eipassoc-02f40779e90cdf336",
            "domain": "vpc",
            "id": "eipalloc-091d9902767672896",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0b43a103adca039e4",
            "private_dns": "ip-10-0-3-28.ec2.internal",
            "private_ip": "10.0.3.28",
            "public_dns": "ec2-98-83-20-27.compute-1.amazonaws.com",
            "public_ip": "98.83.20.27",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f4f997dbaf4d7036",
            "arn": "arn:aws:ec2:us-east-1:686255948752:elastic-ip/eipalloc-0f4f997dbaf4d7036",
            "association_id": "eipassoc-0444240fcc71e6f8a",
            "domain": "vpc",
            "id": "eipalloc-0f4f997dbaf4d7036",
            "network_border_group": "us-east-1",
            "network_interface": "eni-00c2abcd4a022ba46",
            "private_dns": "ip-10-0-4-131.ec2.internal",
            "private_ip": "10.0.4.131",
            "public_dns": "ec2-23-20-220-1.compute-1.amazonaws.com",
            "public_ip": "23.20.220.1",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2_example",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0148782d1455edfe9",
            "arn": "arn:aws:ec2:us-east-1:686255948752:instance/i-0d278609ebe844752",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0d278609ebe844752",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "aws_key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-095506eb4f609d342",
            "private_dns": "ip-10-0-1-225.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.225",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-042ffad78cf3f5c25",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0064040f609749a4c",
            "tags": {
              "Name": "EC2 Public subnet 1"
            },
            "tags_all": {
              "Name": "EC2 Public subnet 1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0e2345ccc3fd0ed64"
            ]
          },
          "dependencies": [
            "aws_internet_gateway.public_internet_gateway",
            "aws_route_table.jhooq_public_route_table",
            "aws_route_table_association.public_subnet_asso",
            "aws_security_group.sg_vpc_jhooq_eu_east_1",
            "aws_subnet.aws_jhooq_public_subnets",
            "aws_vpc.vpc-jhooq-eu-east-1",
            "data.aws_subnet.public_subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:686255948752:internet-gateway/igw-0e80a3c15195e8657",
            "id": "igw-0e80a3c15195e8657",
            "owner_id": "686255948752",
            "tags": {
              "Name": "IGW: For Jhooq US EAST PROJECT"
            },
            "tags_all": {
              "Name": "IGW: For Jhooq US EAST PROJECT"
            },
            "vpc_id": "vpc-0471317b45fa053ac"
          },
          "dependencies": [
            "aws_vpc.vpc-jhooq-eu-east-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-091d9902767672896",
            "association_id": "eipassoc-02f40779e90cdf336",
            "connectivity_type": "public",
            "id": "nat-035cb67ba62df4e88",
            "network_interface_id": "eni-0b43a103adca039e4",
            "private_ip": "10.0.3.28",
            "public_ip": "98.83.20.27",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0444336bbaf34546e",
            "tags": {
              "Name": "Private NAT GW: For jhooq EU Central Project"
            },
            "tags_all": {
              "Name": "Private NAT GW: For jhooq EU Central Project"
            }
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_subnet.aws_jhooq_private_subnets",
            "aws_vpc.vpc-jhooq-eu-east-1"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f4f997dbaf4d7036",
            "association_id": "eipassoc-0444240fcc71e6f8a",
            "connectivity_type": "public",
            "id": "nat-0250844d7f5af361e",
            "network_interface_id": "eni-00c2abcd4a022ba46",
            "private_ip": "10.0.4.131",
            "public_ip": "23.20.220.1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0d3f48f40d33cda2b",
            "tags": {
              "Name": "Private NAT GW: For jhooq EU Central Project"
            },
            "tags_all": {
              "Name": "Private NAT GW: For jhooq EU Central Project"
            }
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_subnet.aws_jhooq_private_subnets",
            "aws_vpc.vpc-jhooq-eu-east-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "jhooq_private_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:686255948752:route-table/rtb-0f4fe694790d45a21",
            "id": "rtb-0f4fe694790d45a21",
            "owner_id": "686255948752",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-035cb67ba62df4e88",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "RT Private: For Jhooq EU CENTRAL PROJECT"
            },
            "tags_all": {
              "Name": "RT Private: For Jhooq EU CENTRAL PROJECT"
            },
            "timeouts": null,
            "vpc_id": "vpc-0471317b45fa053ac"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_nat_gateway.nat_gateway",
            "aws_subnet.aws_jhooq_private_subnets",
            "aws_vpc.vpc-jhooq-eu-east-1"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:686255948752:route-table/rtb-09f143554cc6da173",
            "id": "rtb-09f143554cc6da173",
            "owner_id": "686255948752",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0250844d7f5af361e",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "RT Private: For Jhooq EU CENTRAL PROJECT"
            },
            "tags_all": {
              "Name": "RT Private: For Jhooq EU CENTRAL PROJECT"
            },
            "timeouts": null,
            "vpc_id": "vpc-0471317b45fa053ac"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_nat_gateway.nat_gateway",
            "aws_subnet.aws_jhooq_private_subnets",
            "aws_vpc.vpc-jhooq-eu-east-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "jhooq_public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:686255948752:route-table/rtb-0437dc46b3c0f3ea7",
            "id": "rtb-0437dc46b3c0f3ea7",
            "owner_id": "686255948752",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0e80a3c15195e8657",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "RT Public: For Jhooq EU Cenyral Project"
            },
            "tags_all": {
              "Name": "RT Public: For Jhooq EU Cenyral Project"
            },
            "timeouts": null,
            "vpc_id": "vpc-0471317b45fa053ac"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.public_internet_gateway",
            "aws_vpc.vpc-jhooq-eu-east-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_subnet_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d43c440210225c81",
            "route_table_id": "rtb-0f4fe694790d45a21",
            "subnet_id": "subnet-0444336bbaf34546e"
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_nat_gateway.nat_gateway",
            "aws_route_table.jhooq_private_route_table",
            "aws_subnet.aws_jhooq_private_subnets",
            "aws_vpc.vpc-jhooq-eu-east-1"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-091aeda3ecba3869c",
            "route_table_id": "rtb-09f143554cc6da173",
            "subnet_id": "subnet-0d3f48f40d33cda2b"
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_nat_gateway.nat_gateway",
            "aws_route_table.jhooq_private_route_table",
            "aws_subnet.aws_jhooq_private_subnets",
            "aws_vpc.vpc-jhooq-eu-east-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_asso",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0954a77bfdf1588d0",
            "route_table_id": "rtb-0437dc46b3c0f3ea7",
            "subnet_id": "subnet-0064040f609749a4c"
          },
          "dependencies": [
            "aws_internet_gateway.public_internet_gateway",
            "aws_route_table.jhooq_public_route_table",
            "aws_subnet.aws_jhooq_public_subnets",
            "aws_vpc.vpc-jhooq-eu-east-1"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09c70210b5494b86d",
            "route_table_id": "rtb-0437dc46b3c0f3ea7",
            "subnet_id": "subnet-05def81ac06e74e75"
          },
          "dependencies": [
            "aws_internet_gateway.public_internet_gateway",
            "aws_route_table.jhooq_public_route_table",
            "aws_subnet.aws_jhooq_public_subnets",
            "aws_vpc.vpc-jhooq-eu-east-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_vpc_jhooq_eu_east_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:686255948752:security-group/sg-0e2345ccc3fd0ed64",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e2345ccc3fd0ed64",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "terraform-20240913035413325400000001",
            "name_prefix": "terraform-",
            "owner_id": "686255948752",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "SG : vpc-jhooq-eu-east-1 "
            },
            "tags_all": {
              "Name": "SG : vpc-jhooq-eu-east-1 "
            },
            "timeouts": null,
            "vpc_id": "vpc-0471317b45fa053ac"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc-jhooq-eu-east-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "aws_jhooq_private_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:686255948752:subnet/subnet-0444336bbaf34546e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0444336bbaf34546e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "686255948752",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Subnet-Private : Private Subnet 1"
            },
            "tags_all": {
              "Name": "Subnet-Private : Private Subnet 1"
            },
            "vpc_id": "vpc-0471317b45fa053ac"
          },
          "dependencies": [
            "aws_vpc.vpc-jhooq-eu-east-1"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:686255948752:subnet/subnet-0d3f48f40d33cda2b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d3f48f40d33cda2b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "686255948752",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Subnet-Private : Private Subnet 2"
            },
            "tags_all": {
              "Name": "Subnet-Private : Private Subnet 2"
            },
            "vpc_id": "vpc-0471317b45fa053ac"
          },
          "dependencies": [
            "aws_vpc.vpc-jhooq-eu-east-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "aws_jhooq_public_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:686255948752:subnet/subnet-0064040f609749a4c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0064040f609749a4c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "686255948752",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Subnet-Public : Public Subnet 1"
            },
            "tags_all": {
              "Name": "Subnet-Public : Public Subnet 1"
            },
            "vpc_id": "vpc-0471317b45fa053ac"
          },
          "dependencies": [
            "aws_vpc.vpc-jhooq-eu-east-1"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:686255948752:subnet/subnet-05def81ac06e74e75",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05def81ac06e74e75",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "686255948752",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Subnet-Public : Public Subnet 2"
            },
            "tags_all": {
              "Name": "Subnet-Public : Public Subnet 2"
            },
            "vpc_id": "vpc-0471317b45fa053ac"
          },
          "dependencies": [
            "aws_vpc.vpc-jhooq-eu-east-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc-jhooq-eu-east-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:686255948752:vpc/vpc-0471317b45fa053ac",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0038f2e6fd4019eed",
            "default_route_table_id": "rtb-0b7e0d7d3910dcd23",
            "default_security_group_id": "sg-034c5080e82a09e9b",
            "dhcp_options_id": "dopt-0b65fa53ff8edae3f",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0471317b45fa053ac",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0b7e0d7d3910dcd23",
            "owner_id": "686255948752",
            "tags": {
              "Name": "VPC: jhooq-eu-east-1"
            },
            "tags_all": {
              "Name": "VPC: jhooq-eu-east-1"
            }
          }
        }
      ]
    }
  ]
}